# goit-pythonweb-hw-01

./: e01.py  e02.py  pyproject.toml  task_01-Factory_Method.py  task_02_solid.py
